--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+
+    <string name="title_activity_call">CallActivity</string>
+    <string name="dummy_button">hang up</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
